--- a/app/global.css
+++ b/app/global.css
@@ -115,3 +115,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+.next-image--dynamic-fill {
+  width: 100%;
+  grid-column: 1 / -1;
+}
+.next-image--dynamic-fill > span {
+  position: relative !important;
+}
+.next-image--dynamic-fill img {
+  object-fit: contain;
+  width: 100% !important;
+  position: relative !important;
+  height: unset !important;
+}
